src/test/deca/context/valid/SansObjet/DeclVar-GE-boolean-int-float.deca
// Description:
//    Declaration of a boolean variable using >= operation between a int variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  3; 
    float y = 2.5; 
    boolean z = 3 >= 2.5; 
}
