src/test/deca/context/invalid/SansObjet/DeclVar-GE-int-string-string.deca
// Description:
//    Declaration of a int variable using >= operation between a string variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "Everyone"; 
    string y = "Hello"; 
    int z = "Everyone" >= "Hello"; 
}
